--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,3 +4,11 @@ body {
   font-weight: 400;
   line-height: 1.7;
 }
+.heading-primary {
+  font-size: 4.8rem;
+  font-weight: 700;
+  display: block;
+  line-height: 1;
+  letter-spacing: 1px;
+  color: var(--color-Dark-Blue);
+}
