--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,6 +3,7 @@ body {
   font-size: var(--font-size-default);
   font-weight: 400;
   line-height: 1.7;
+  background-color: var(--color-neutral-Light-Grayish-Blue);
 }
 .heading-primary {
   font-size: 4.8rem;
