--- a/sass/layout/_section__why.scss
+++ b/sass/layout/_section__why.scss
@@ -1,3 +1,29 @@
 .section__why {
-  grid-column: center-start / center-end;
+  grid-column: full-start / full-end;
+  background-color: var(--color-neutral-Light-Grayish-Blue);
+  padding: 4.8rem 0 4.8rem 0;
+  margin-top: -5rem;
+  z-index: -1;
+  position: relative;
+}
+.why__description {
+  font-size: var(--font-size-default);
+  color: var(--color-neutral-Grayish-Blue);
+  max-width: 65%;
+  margin-bottom: 4.8rem;
+}
+.why__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.8rem;
+}
+.why-img {
+  width: 4.25rem;
+  height: 4.25rem;
+}
+.why-text {
+  color: var(--color-neutral-Grayish-Blue);
+  font-size: 1.3rem;
+  line-height: 1.8;
 }
