--- a/css/styles.css
+++ b/css/styles.css
@@ -68,11 +68,22 @@ body {
   font-size: 4.8rem; }
 
 .heading-secondary {
-  font-size: 2.5rem;
-  margin-bottom: 1.2rem; }
+  font-size: 2.5rem; }
 
 .heading-tertiary {
   font-size: 1.8rem; }
+
+.u-mb-sm {
+  margin-bottom: 2rem; }
+
+.u-mb-md {
+  margin-bottom: 4rem; }
+
+.u-mb-lg {
+  margin-bottom: 6rem; }
+
+.u-mb-hg {
+  margin-bottom: 8rem; }
 
 .btn__link:link,
 .btn__link:visited {
@@ -125,7 +136,37 @@ body {
   grid-column: full-start / full-end; }
 
 .section__articles {
-  grid-column: center-start / center-end; }
+  grid-column: center-start / center-end;
+  padding: 9.6rem 0; }
+
+.article__content {
+  padding: 2.2rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem; }
+
+.article__img-box {
+  flex: 0 0 40%; }
+
+.article {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+  border-radius: 11px;
+  overflow: hidden; }
+  .article-img {
+    width: 100%;
+    height: 100%;
+    display: inline-block; }
+  .article-author {
+    font-size: 1.2rem;
+    color: var(--color-neutral-Grayish-Blue); }
+  .article-text {
+    color: var(--color-neutral-Grayish-Blue);
+    font-size: 1.3rem;
+    line-height: 1.8; }
 
 .section__home {
   grid-column: center-start / full-end; }
@@ -155,7 +196,7 @@ body {
 .section__why {
   grid-column: full-start / full-end;
   background-color: var(--color-neutral-Light-Grayish-Blue);
-  padding: 4.8rem 0 4.8rem 0;
+  padding: 4.8rem 0 9.6rem 0;
   margin-top: -5rem;
   z-index: -1;
   position: relative; }
