--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,6 +10,18 @@
 html {
   // 1rem = 10px
   font-size: 62.5%;
+  overflow-x: hidden;
+
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%;
+  }
 }
 body {
   box-sizing: border-box;
@@ -19,6 +31,9 @@ body {
   max-width: 144rem;
   padding: 0 14rem;
   margin: 0 auto;
+  @include respond(tab-port) {
+    padding: 0 6rem;
+  }
 }
 .main__grid {
   display: grid;
@@ -28,6 +43,15 @@ body {
       [col-start] minmax(min-content, 14rem) [col-end]
     )
     [center-end] minmax(14rem, 1fr) [full-end];
+
+  @include respond(tab-port) {
+    grid-template-columns:
+      [full-start] minmax(6rem, 1fr) [center-start] repeat(
+        8,
+        [col-start] minmax(min-content, 14rem) [col-end]
+      )
+      [center-end] minmax(6rem, 1fr) [full-end];
+  }
 }
 
 .grid {
