--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,6 +17,10 @@ body {
 
 .heading-primary {
   font-size: 4.8rem;
+
+  @include respond(phone) {
+    font-size: 3.5rem;
+  }
 }
 .heading-secondary {
   font-size: 2.5rem;
