--- a/sass/layout/_section__why.scss
+++ b/sass/layout/_section__why.scss
@@ -6,11 +6,19 @@
   z-index: -1;
   position: relative;
 }
+.why {
+  @include respond(mid-tab-port) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 .why__description {
   font-size: var(--font-size-default);
   color: var(--color-neutral-Grayish-Blue);
   max-width: 65%;
   margin-bottom: 4.8rem;
+  @include respond(mid-tab-port) {
+    max-width: 100%;
+  }
 }
 .why__item {
   display: flex;
