--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,11 +19,14 @@ body {
   font-size: 4.8rem;
 
   @include respond(phone) {
-    font-size: 3.5rem;
+    font-size: 3.6rem;
   }
 }
 .heading-secondary {
   font-size: 2.5rem;
+  @include respond(phone) {
+    font-size: 2.3rem;
+  }
 }
 .heading-tertiary {
   font-size: 1.8rem;
