--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,23 @@ html {
       font-size: 50%; } }
 
 body {
-  box-sizing: border-box;
-  overflow-x: hidden; }
+  box-sizing: border-box; }
+
+.sticky .header {
+  position: fixed;
+  background-color: var(--color-neutral-White);
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  z-index: 999; }
+
+.sticky .section__home {
+  padding-top: 6.5rem; }
+
+.hidden {
+  transition: transform 1s, opacity 1s; }
+
+.section--hidden {
+  opacity: 0;
+  transform: translateY(8rem); }
 
 .container {
   max-width: 144rem;
@@ -139,19 +154,22 @@ body {
 
 .header__box {
   background-color: var(--color-neutral-White);
-  grid-column: full-start / full-end;
-  height: 8rem; }
+  grid-column: full-start / full-end; }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem 4.8rem;
-  width: 85%;
+  height: 6.5rem;
+  width: 100%;
   margin: 0 auto; }
   @media (max-width: 64.375em) {
     .header {
       width: 100%; } }
+  @media (max-width: 37.5em) {
+    .header {
+      padding: 0.9rem 2.4rem; } }
 
 .main__nav-item {
   position: relative; }
@@ -162,7 +180,7 @@ body {
   bottom: -5px;
   left: 0;
   width: 100%;
-  height: 1.2px;
+  height: 1px;
   background-color: var(--color-Lime-Green);
   transform: scalex(0);
   transition: transform 0.2s 0.2s; }
@@ -251,7 +269,10 @@ body {
 
 .section__articles {
   grid-column: center-start / center-end;
-  padding: 9.6rem 0; }
+  padding: 6.5rem 0; }
+  @media (max-width: 37.5em) {
+    .section__articles {
+      padding: 4.8rem 0; } }
 
 .article__content {
   padding: 2.2rem;
@@ -353,10 +374,7 @@ body {
 .section__why {
   grid-column: full-start / full-end;
   background-color: var(--color-neutral-Light-Grayish-Blue);
-  padding: 4.8rem 0 9.6rem 0;
-  margin-top: -5rem;
-  z-index: -1;
-  position: relative; }
+  padding: 6.5rem 0; }
   @media (max-width: 37.5em) {
     .section__why {
       margin-top: 0; } }
