--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,7 @@
 .header__box {
   background-color: var(--color-neutral-White);
   grid-column: full-start / full-end;
-  height: 8rem;
+  // height: 8rem;
 }
 
 .header {
@@ -9,11 +9,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem 4.8rem;
-
-  width: 85%;
+  height: 6.5rem;
+  width: 100%;
   margin: 0 auto;
   @include respond(tab-port) {
     width: 100%;
+  }
+  @include respond(phone) {
+    padding: 0.9rem 2.4rem;
   }
 }
 .main__nav-item {
@@ -25,7 +28,7 @@
   bottom: -5px;
   left: 0;
   width: 100%;
-  height: 1.2px;
+  height: 1px;
   background-color: var(--color-Lime-Green);
   transform: scalex(0);
   transition: transform 0.2s 0.2s;
