--- a/sass/layout/_section__articles.scss
+++ b/sass/layout/_section__articles.scss
@@ -1,6 +1,10 @@
 .section__articles {
   grid-column: center-start / center-end;
-  padding: 9.6rem 0;
+  padding: 6.5rem 0;
+
+  @include respond(phone) {
+    padding: 4.8rem 0;
+  }
 }
 
 // .article__box {
