--- a/sass/layout/_section__why.scss
+++ b/sass/layout/_section__why.scss
@@ -1,10 +1,10 @@
 .section__why {
   grid-column: full-start / full-end;
   background-color: var(--color-neutral-Light-Grayish-Blue);
-  padding: 4.8rem 0 9.6rem 0;
-  margin-top: -5rem;
-  z-index: -1;
-  position: relative;
+  padding: 6.5rem 0;
+  // margin-top: -5rem;
+  // z-index: -1;
+  // position: relative;
   @include respond(phone) {
     margin-top: 0;
   }
