--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -34,7 +34,7 @@ body {
   z-index: 999;
 }
 .sticky .section__home {
-  padding-top: 6.5rem;
+  margin-top: 6.5rem;
 }
 .hidden {
   transition: transform 1s, opacity 1s;
